# banco-de-los-alpes

./: .dockerignore  .env  .env.example  Dockerfile  deployment.yml  docker-compose.yml  pyproject.toml  readme.md  test.txt
.github/workflows/: ci-cd.yml
data/: postmaster.pid
data/base/13467/: 2619
data/base/13468/: pg_internal.init
data/base/16384/: 1247  1249  1259  16388  16395  16403  16404  16406  2579  2606  2608  2610  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data/pg_stat_tmp/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
src/: alembic.ini  database.py  main.py
src/alembic/: env.py
src/alembic/versions/: 55a6299c43e5_init.py  c83685a2bce2_update_user_schema.py  f96371c7419c_revision_table.py
src/controllers/: auth_controller.py  card_controller.py  request_controller.py  revision_controller.py
src/dtos/: adviser_dtos.py  auth_dtos.py  card_dtos.py  document_dtos.py  request_dtos.py  review_dtos.py
src/repositories/: card_repository.py  request_repository.py  revision_repository.py  user_repository.py
src/routes/: auth_route.py  card_routes.py  request_routes.py  revision_routes.py  user_routes.py
src/schemas/: active_schema.py  activity_schema.py  card_schema.py  passive_schema.py  phone_schema.py  request_schema.py  revision_schema.py  user_schema.py
src/utils/: logs.py
